syntax = "proto3";

package feeprofile;

option go_package = "github.com/meshtrade/api/go/instrument/feeprofile";

/* 
LifecycleEventCategory defines the different types of lifecycle events that can trigger a Fee.
*/
enum LifecycleEventCategory {
  UNDEFINED_LIFECYCLE_EVENT_CATEGORY = 0; // 0 not used to prevent unexpected default value behaviour.
  LISTING_LIFECYCLE_EVENT_CATEGORY = 1;
  PRIMARY_MARKET_SETTLEMENT_LIFECYCLE_EVENT_CATEGORY = 2;
}